# aws-cli-mfa

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
aws_cli_mfa/: main.py
